# aro-sync-users-ad

./: .dockerignore  .env.example  .env.localstack  .gitignore  Dockerfile  Dockerfile.cron  Makefile  README.md  SCIM_IMPLEMENTATION.md  ad_users.csv  docker-compose.yml  pyproject.toml  technical_proposal.md  technical_proposal_es.md  test_sync.py
.github/workflows/: ci.yml
app/: auth.py  client.py  config.py  main.py  models.py  repositories.py  s3_service.py  scim_models.py  scim_router.py  scim_service.py  services.py
docs/: LOCALSTACK_SETUP.md  QUICK_START.md  S3_INTEGRATION.md  SETUP-NULLPLATFORM.md  TROUBLESHOOTING.md  WILDCARD-NRN-FEATURE.md  technical_proposal.md  technical_proposal_es.md
sample-data/: implementations_grupos.csv  mapping.csv  output.json  upay_users.csv
scripts/: init-s3.sh  trigger-sync.sh  upload-samples-to-localstack.sh
